# parallax

./: README.md  pyproject.toml
docs/: code-of-conduct.md
parallax/: __init__.py  offload.py  offload_test.py  offload_tpu_test.py
parallax/sharding/: auto_shard.py  auto_shard_test.py  base.py  base_test.py  data_structures.py  ddp.py  ddp_test.py  fsdp.py  fsdp_test.py  manual.py  manual_linen.py  utils.py  utils_test.py
src/parallax/examples/: configs.py  encoder_decoder.py  main.py  models.py  trainer.py  trainer_test.py  utils.py  xm_launch.py
src/parallax/examples/gpt_oss/: config.py  model.py  model_test.py  moe_layer.py  moe_layer_test.py
src/parallax/sharding/: auto_shard.py  base.py  data_structures_test.py  fsdp_test.py  manual.py  utils.py  utils_test.py
